--- a/Particle_transformer/training_setup.ipynb
+++ b/Particle_transformer/training_setup.ipynb
@@ -364,7 +364,13 @@
       "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_config_07.json\n",
       "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_config_08.json\n",
       "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_config_09.json\n",
-      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_config_10.json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_config_01.json\n",
       "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_config_02.json\n",
       "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_config_03.json\n",
@@ -1485,6 +1491,195 @@
     "    cmd = f'python train_ParT.py {config_path}'\n",
     "    print(cmd)\n",
     "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_pTnorm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in [100, 300, 900, 1800, 3000]:\n",
+    "    i = 1\n",
+    "    for seed in range(123, 1100, 100):\n",
+    "        config_path = f'config_files/CWoLa_ParT_L{l}_pTnorm_config_{i:02}.json'\n",
+    "        with open(config_path, 'w') as f:\n",
+    "            data = {}\n",
+    "\n",
+    "            data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/']\n",
+    "            data['seed'] = seed\n",
+    "            data['model_name'] = f'ParT_L{l}_w_a_pTnorm_{i:02}'\n",
+    "            data['model_structure'] = 'ParT_Light'\n",
+    "            data['sample_type'] = f'quark jet: = 2, L: {l} fb^-1, w/ photon, pT normalization'\n",
+    "            data['remove_decay_products'] = False\n",
+    "\n",
+    "            data['training_method'] = 'CWoLa'\n",
+    "            data['luminosity'] = l\n",
+    "            data['cut_type'] = 'quark_jet_2'\n",
+    "            data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "            data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "            data['decay_channel'] = 'aa'\n",
+    "\n",
+    "            json.dump(data, f, indent=4)\n",
+    "\n",
+    "        cmd = f'python train_ParT.py {config_path}'\n",
+    "        print(cmd)\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L100_remove_decay_products_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L300_remove_decay_products_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L900_remove_decay_products_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L1800_remove_decay_products_pTnorm_config_10.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_01.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_02.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_03.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_04.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_05.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_06.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_07.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_08.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_09.json\n",
+      "python train_ParT.py config_files/CWoLa_ParT_L3000_remove_decay_products_pTnorm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in [100, 300, 900, 1800, 3000]:\n",
+    "    i = 1\n",
+    "    for seed in range(123, 1100, 100):\n",
+    "        config_path = f'config_files/CWoLa_ParT_L{l}_remove_decay_products_pTnorm_config_{i:02}.json'\n",
+    "        with open(config_path, 'w') as f:\n",
+    "            data = {}\n",
+    "\n",
+    "            data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/']\n",
+    "            data['seed'] = seed\n",
+    "            data['model_name'] = f'ParT_L{l}_wo_a_pTnorm_{i:02}'\n",
+    "            data['model_structure'] = 'ParT_Light'\n",
+    "            data['sample_type'] = f'quark jet: = 2, L: {l} fb^-1, w/o photon, pT normalization'\n",
+    "            data['remove_decay_products'] = True\n",
+    "\n",
+    "            data['training_method'] = 'CWoLa'\n",
+    "            data['luminosity'] = l\n",
+    "            data['cut_type'] = 'quark_jet_2'\n",
+    "            data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "            data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "            data['decay_channel'] = 'aa'\n",
+    "\n",
+    "            json.dump(data, f, indent=4)\n",
+    "\n",
+    "        cmd = f'python train_ParT.py {config_path}'\n",
+    "        print(cmd)\n",
+    "        i += 1"
    ]
   }
  ],
